# bookie

./: .eslintrc.cjs  .hc  Cargo.toml  README.md  motivation.md  package-lock.json  package.json
dnas/bookie/workdir/: dna.yaml
dnas/bookie/zomes/coordinator/bookie/: Cargo.toml
dnas/bookie/zomes/coordinator/bookie/src/: booking.rs  (+7 more)
dnas/bookie/zomes/coordinator/file_storage/: Cargo.toml
dnas/bookie/zomes/coordinator/profiles/: Cargo.toml
dnas/bookie/zomes/integrity/bookie/: Cargo.toml
ui/app/: index.html  package.json  vite.config.ts
ui/app/src/: holochain-app.ts
ui/applet/: package.json
ui/applet/demo/: index.html
ui/applet/src/: applet-main.ts  cross-applet-main.ts  index.ts
ui/applet/workdir/: web-happ.yaml
ui/lib/: package.json
ui/lib/src/: bookie-client.ts  bookie-store.ts  context.ts  index.ts  types.ts  utils.ts
ui/lib/src/bookie/bookie/: bookie-client.ts  bookie-store.ts  types.ts
ui/lib/src/elements/: all-resources-calendar.ts  all-resources.ts  bookie-context.ts  booking-detail.ts  booking-request-detail.ts  booking-request-summary.ts  booking-requests-for-resource.ts  booking-summary.ts  bookings-for-booker.ts  bookings-for-booking-request.ts  bookings-for-resource.ts  create-booking-request.ts  create-booking.ts  create-resource.ts  edit-booking.ts  edit-resource.ts  main-dashboard.ts  my-booking-requests.ts  my-resources-calendar.ts  my-resources.ts  pending-booking-requests.ts  resource-calendar.ts  resource-detail.ts  resource-summary.ts  resources-calendar.ts  upcoming-bookings-for-booker.ts
workdir/: happ.yaml  web-happ.yaml
(+26 files in other folders)
