[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"
holochain = "0.1.3"
serde = "1"

[workspace.dependencies.bookie]
path = "dnas/bookie/zomes/coordinator/bookie"

[workspace.dependencies.bookie_integrity]
path = "dnas/bookie/zomes/integrity/bookie"

[workspace.dependencies.file_storage]
path = "dnas/bookie/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/bookie/zomes/integrity/file_storage"

[workspace.dependencies.profiles]
path = "dnas/bookie/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/bookie/zomes/integrity/profiles"
